--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon --exec ts-node src/main.ts"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.5.4",
@@ -18,6 +19,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1"
